
2024-07-29  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* move.c (optimized_move_display_to_edited): fixed small bug
	  in logic for floating sign symbol to the right of decimal_point
	  or assumed decimal_point

2024-07-13  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* move.c (indirect_move) fixed sanitizer warnings by moving
	  one line of code

2024-07-11  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (cob_sys_scr_dump, cob_sys_scr_restore) fixed C90 warnings

2024-07-11  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (cob_sys_scr_dump, cob_sys_scr_restore) fixed C90 warnings
	  Also fixed issue when build without curses
	* move.c (indirect_move) fixed C90 warnings
	* profiling.c (profile_setup_clock) fixed C90 warnings

2024-07-10  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	fix errors in cob_optimized_move_display_to_edited introduced
	with changes at revision R5285. The errors showed up in the 
	NIST tests in group NC.

	* move.c (optimized_move_display_to_edited): fixed bugs
	  (indirect_move): fixed bug when calculating scale of 
	  the intermediate cob field

2024-07-09  Boris Eng <boris.eng@ocamlpro.com>

	* fileio.c (bdb_bt_compare, indexed_open): handle BDB keys of different
	  length with a flag USE_BDB_KEYDIFF (passed with preparser flag CPPFLAGS)
	* common.c (cob_cmp_strings), coblocal.h (cob_cmp_strings):
	  extracted from (cob_cmp_alnum)

2024-07-02  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* numeric.c (cob_add_bcd) fixed check for default ROUNDED option
	  to resolve bug 934

2024-06-10  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* screenio.c (cob_sys_scr_dump, cob_sys_scr_restore) added new functions
	* common.h added exports for the two new functions
	* system.def: added as system library call CBL_GC_SCR_DUMP,
	  CBL_GC_SCR_RESTORE

2024-05-30  Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

		fix errors caught by the Sanitizer functionality of GCC. This 